--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "dev": "gulp watch",
     "build": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "immutable": "^4.3.7",
+    "source-map-js": "^1.2.1"
+  },
   "description": "",
   "devDependencies": {
-    "gulp": "^5.0.0",
+    "gulp": "^4.0.2",
+    "gulp-imagemin": "7.1",
     "gulp-sass": "^5.1.0",
     "sass": "^1.79.4"
   }
